syntax = "proto3";
package packageName;
import "options.proto";
option go_package = ".;packageName";

message Message1 {
    int64 Param1 = 1;
    string Param2 = 2;
    Message2 M2 = 3;
    repeated Message2 M2S = 4;
}

message Message2 {
    fixed32 Param1 = 1;
    bytes P2 = 2;
    repeated int32 P3 = 3;
    Message1 M1 = 4;
}

message Model1 {
    option (model) = "cql";
    option (table) = "(ID, ShardKey)";
    option (view) = "(ShardKey, ID)";
    int32 ID = 1;
    int32 ShardKey = 2;
    string P1 = 3;
    repeated string P2 = 4;
    uint64 P5 = 5;
}

message Model2 {
    option (model) = "cql";
    option (table) = "((ID, ShardKey), -P1)";
    option (view) = "(P1, ShardKey, ID)";
    int64 ID = 1;
    int32 ShardKey = 2;
    string P1 = 3;
    repeated string P2 = 4;
    uint64 P5 = 5;
}